@@ -1,3 +1,8 @@
+2001-12-03  Thorsten Kukuk  <kukuk@suse.de>
+
+	* ypxfr/ypxfr.c (ypxfr): Don't replace name of master with
+	FQDN, else ypserv cannot compare it later.
+
 2001-11-26  Thorsten Kukuk  <kukuk@suse.de>
 
 	* release version 2.2
